rebrain/kubernetes/base/final base/configs/db_svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - protocol: TCP
    name: http
    port: 3306
    targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: db
  labels:
    app: db
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: db
    tier: mysql
  clusterIP: None
