rebrain/kubernetes/base/final base/configs/final_service.yml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-service
  namespace: final
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: librespeed
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
